@@ -1,3 +1,9 @@
+2001-07-12  Frank Ch. Eigler  <fche@redhat.com>
+
+	* insn.scm (filter-harmlessly-ambiguous-insns): Fix msg typo.
+	(mask-superset?): Look for strict supersets to allow rejection of
+	duplicate insns.
+
 2001-07-11  Frank Ch. Eigler  <fche@redhat.com>
 
 	* sid-cpu.scm (-gen-mach-params): New proc to emit ...CHUNK_BITSIZE...
